<resources>
    <string name="app_name">Matematika</string>
    <string name="minus">Ayirish (-)</string>
    <string name="plus">Qo\'shish (+)</string>
    <string name="divide">Bo\'lish (÷)</string>
    <string name="multiply">Ko\'paytirish (×)</string>
    <string name="todo">TODO</string>

    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="owner">sda</string>
    <string name="ministry"><b>O\'ZBEKISTON RESPUBLIKASI XALQ TA\'LIM VAZIRLIGI MULTIMEDIYA UMUMTALIM DASTURLARINI RIVOJLANTIRISH MARKAZI</b></string>
    <string name="university"><b>MUHAMMAD AL XORAZMIY NOMIDAGI TOSHKENT AXBOROT TEXNOLOGIYALARI UNIVERSITETI</b></string>
    <string name="authors">Mualliflar:</string>
    <string name="authors_name">Mo\'minov S.M, Temurov N.Sh</string>
    <string name="programmers">Maxmurodov B.M, Kalabaev Sh.J</string>
    <string name="dastur_mualliflari">Dastur mualliflari</string>
    <string name="address">Toshkent sh. Yunusobod 13, 49 b\n(12-maktab janubiy binosi)\n\nTelefonlar:\n(71) 202-13-93, (93) 343-55-25\n\nFax: (71) 223-16-31\n\nE-mail:<a href="mailto:multimedia@xtv.uz">multimedia@xtv.uz</a></string>
</resources>
