<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dasturlash.matematika.MainActivity"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="@+id/container"
        app:layout_constraintBottom_toTopOf="@+id/minusBtn"
        app:layout_constraintRight_toRightOf="@+id/container"
        app:layout_constraintLeft_toLeftOf="@+id/container"
        android:src="@drawable/teacher"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_height="50dp"
        android:layout_width="250dp"
        app:layout_constraintRight_toRightOf="@+id/container"
        app:layout_constraintLeft_toLeftOf="@+id/container"
        app:layout_constraintBottom_toTopOf="@+id/plusBtn"
        android:text="@string/minus" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/plusBtn"
        app:layout_constraintRight_toRightOf="@+id/container"
        app:layout_constraintLeft_toLeftOf="@+id/container"
        app:layout_constraintBottom_toTopOf="@+id/divideBtn"
        android:text="@string/plus" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/divideBtn"
        app:layout_constraintRight_toRightOf="@+id/container"
        app:layout_constraintLeft_toLeftOf="@id/container"
        app:layout_constraintBottom_toTopOf="@+id/multiplyBtn"
        android:text="@string/divide" />

    <Button
        android:id="@+id/multiplyBtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/multiply"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/container"
        app:layout_constraintRight_toRightOf="@+id/container"
        app:layout_constraintBottom_toBottomOf="@+id/container" />

</android.support.constraint.ConstraintLayout>
